--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gussing Game </title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gussing Game</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="card">
+        <div class="card-title">
+          <h1>Gusing Game</h1>
+        </div>
+        <div class="card-body">
+          <form action="">
 
-  <script src="./index.js"></script>
-</body>
+            <div class="form-field">
+              <label for="guessingNumber">Guess a number between 1-5:</label>
+              <input type="number" id="guessingNumber" min="1" max="5" />
+            </div>
+
+            <div class="buttons">
+              <button id="check">check result</button>
+            </div>
+
+          </form>
+
+          <p class="resultText"></p>
+          <p class="remainingAttempts"></p>
+
+        </div>
+      </div>
+    </div>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
