--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="buttons">
-              <button id="check">check result</button>
+              <button id="check" class="btn">check result</button>
             </div>
 
           </form>
